--- a/package.json
+++ b/package.json
@@ -3,82 +3,68 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "7.1.6",
+    "@babel/core": "7.2.2",
     "@bugsnag/js": "^5.2.0",
     "@bugsnag/plugin-react": "^5.2.0",
-    "@svgr/webpack": "2.4.1",
-    "@types/jest": "23.3.13",
+    "@svgr/webpack": "4.1.0",
+    "@types/classnames": "^2.2.7",
+    "@types/jest": "24.0.3",
     "@types/lodash": "^4.14.120",
-    "@types/node": "10.12.21",
-    "@types/react": "16.8.1",
-    "@types/react-dom": "16.0.11",
+    "@types/node": "11.9.3",
+    "@types/react": "16.8.2",
+    "@types/react-dom": "16.8.0",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "9.0.0",
-    "babel-jest": "23.6.0",
-    "babel-loader": "8.0.4",
+    "babel-eslint": "10.0.1",
+    "babel-jest": "24.1.0",
+    "babel-loader": "8.0.5",
     "babel-plugin-named-asset-import": "^0.3.0",
     "babel-preset-react-app": "^7.0.0",
     "bfj": "6.1.1",
-    "case-sensitive-paths-webpack-plugin": "2.1.2",
-    "chalk": "2.4.1",
-    "css-loader": "1.0.0",
-    "dotenv": "6.0.0",
+    "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "chalk": "2.4.2",
+    "classnames": "^2.2.6",
+    "css-loader": "2.1.0",
+    "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
     "dotenv-webpack": "^1.7.0",
-    "eslint": "5.6.0",
+    "eslint": "5.13.0",
     "eslint-config-react-app": "^3.0.6",
-    "eslint-loader": "2.1.1",
-    "eslint-plugin-flowtype": "2.50.1",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-react": "7.11.1",
-    "file-loader": "2.0.0",
+    "eslint-loader": "2.1.2",
+    "eslint-plugin-flowtype": "3.4.1",
+    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-jsx-a11y": "6.2.1",
+    "eslint-plugin-react": "7.12.4",
+    "file-loader": "3.0.1",
     "fork-ts-checker-webpack-plugin-alt": "0.4.14",
-    "fs-extra": "7.0.0",
+    "fs-extra": "7.0.1",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
-    "jest": "23.6.0",
-    "jest-pnp-resolver": "1.0.1",
-    "jest-resolve": "23.6.0",
-    "mini-css-extract-plugin": "0.4.3",
+    "jest": "24.1.0",
+    "jest-pnp-resolver": "1.1.0",
+    "jest-resolve": "24.1.0",
+    "mini-css-extract-plugin": "0.5.0",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
-    "pnp-webpack-plugin": "1.1.0",
+    "pnp-webpack-plugin": "1.2.1",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
-    "postcss-preset-env": "6.3.1",
+    "postcss-preset-env": "6.5.0",
     "postcss-safe-parser": "4.0.1",
     "react": "^16.7.0",
     "react-app-polyfill": "^0.2.0",
     "react-dev-utils": "^7.0.1",
     "react-dom": "^16.7.0",
-    "resolve": "1.8.1",
+    "resolve": "1.10.0",
     "sass-loader": "7.1.0",
-    "style-loader": "0.23.0",
-    "terser-webpack-plugin": "1.1.0",
-    "typescript": "3.3.1",
-    "url-loader": "1.1.1",
-    "webpack": "4.19.1",
+    "style-loader": "0.23.1",
+    "terser-webpack-plugin": "1.2.2",
+    "typescript": "3.3.3",
+    "url-loader": "1.1.2",
+    "webpack": "4.29.3",
     "webpack-bugsnag-plugins": "^1.3.0",
     "webpack-dev-server": "3.1.14",
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "3.6.3"
-  },
-  "watch": {
-    "tslint": {
-      "patterns": [
-        "src"
-      ],
-      "extensions": "ts,tsx",
-      "quiet": false
-    },
-    "stylelint": {
-      "patterns": [
-        "src"
-      ],
-      "extensions": "scss",
-      "quiet": false
-    }
   },
   "scripts": {
     "start": "node scripts/start.js",
@@ -92,8 +78,6 @@
     "build-storybook": "build-storybook",
     "tslint": "tslint -p tsconfig.json",
     "stylelint": "stylelint 'src/**/*.scss'",
-    "watch-tslint": "npm-watch tslint",
-    "watch-stylelint": "npm-watch stylelint",
     "lint-staged": "lint-staged",
     "pre-commit": "yarn lint-staged && yarn test-unwatch"
   },
@@ -140,8 +124,7 @@
     "testEnvironment": "jsdom",
     "testURL": "http://localhost",
     "transform": {
-      "^.+\\.(js|jsx)$": "<rootDir>/node_modules/babel-jest",
-      "^.+\\.tsx?$": "ts-jest",
+      "^.+\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/babel-jest",
       "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
       "^(?!.*\\.(js|jsx|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
     },
@@ -180,6 +163,7 @@
     "@storybook/addon-links": "^4.1.11",
     "@storybook/addon-notes": "^4.1.11",
     "@storybook/addon-options": "^4.1.11",
+    "@storybook/addon-viewport": "^4.1.11",
     "@storybook/addons": "^4.1.11",
     "@storybook/react": "^4.1.11",
     "@types/enzyme": "^3.1.16",
@@ -194,12 +178,10 @@
     "enzyme-to-json": "^3.3.5",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.3",
-    "npm-watch": "^0.6.0",
     "qrcode": "^1.3.3",
     "sinon": "^7.2.3",
     "stylelint": "^9.10.1",
     "stylelint-config-standard": "^18.2.0",
-    "ts-jest": "^23.10.5",
     "tslint": "^5.12.1",
     "tslint-config-prettier": "^1.17.0",
     "tslint-react": "^3.6.0"
