--- a/package.json
+++ b/package.json
@@ -111,7 +111,7 @@
       "!src/Utils.tsx",
       "!src/App.tsx",
       "!src/index.tsx",
-      "!src/Indicator/Status.ts",
+      "!src/Time/Status.ts",
       "!src/serviceWorker.ts",
       "!**/*.d.ts"
     ],
@@ -137,7 +137,7 @@
       "^.+\\.module\\.(css|sass|scss)$"
     ],
     "moduleNameMapper": {
-      "^Indicator/(.+)": "<rootDir>/src/Indicator/$1",
+      "^Time/(.+)": "<rootDir>/src/Time/$1",
       "^react-native$": "react-native-web",
       "^__tests__/(.+)": "<rootDir>/__tests__/$1",
       "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
