--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.1.0",
     "lint-staged": "^8.1.3",
+    "logrocket": "^0.6.19",
     "qrcode": "^1.3.3",
     "sinon": "^7.2.3",
     "stylelint": "^9.10.1",
