--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,20 @@ before_script:
 script:
 - yarn coverage
 after_script:
+# Prepare for GitHub
+- openssl aes-256-cbc -K $encrypted_091c59dca5d1_key -iv $encrypted_091c59dca5d1_iv -in ./id_rsa.enc -out ~/.ssh/id_rsa -d
+- chmod 600 ~/.ssh/id_rsa
+- echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
+- git config --global user.email "h.taku86@gmail.com"
+- git config --global user.name "takuyahara"
+- git config --global url."git@github.com:".insteadOf "https://github.com/"
+# Build Storybook
+- git checkout -b Storybook master
+- mv netlify.storybook.toml netlify.toml
+- git add .
+- git commit -m "$TRAVIS_COMMIT_MESSAGE"
+- git push -u origin Storybook --force
+# Misc
 - greenkeeper-lockfile-upload
 - codecov
 notifications:
