--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "public/"
-  command = "yarn anti-vulnerability && yarn build"
+  command = "yarn build"
 
 [[redirects]]
   from = "/*"
