--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
 language: node_js
 node_js:
 - 11.1.0
+dist: trusty
+addons:
+  apt:
+    packages:
+      - libnss3
 before_install:
+- "sysctl kernel.unprivileged_userns_clone=1"
+- "export DISPLAY=:99.0"
+- "sh -e /etc/init.d/xvfb start"
 - yarn global add codecov snyk greenkeeper-lockfile@1
 before_script:
 - greenkeeper-lockfile-update
